@@ -65,6 +65,16 @@ class TestInventoryBasics(TestCase):
         self.assertEqual('hello-id', ie.file_id)
         self.assertEqual('file', ie.kind)
 
+    def test_copy(self):
+        """Make sure copy() works and creates a deep copy."""
+        inv = self.make_inventory(root_id='some-tree-root')
+        ie = inv.add_path('hello', 'file', 'hello-id')
+        inv2 = inv.copy()
+        inv.root.file_id = 'some-new-root'
+        ie.name = 'file2'
+        self.assertEqual('some-tree-root', inv2.root.file_id)
+        self.assertEqual('hello', inv2['hello-id'].name)
+
     def test_is_root(self):
         """Ensure our root-checking code is accurate."""
         inv = self.make_inventory('TREE_ROOT')
